Fix popover and header overflow for flat roster

--- a/src/UI/Headquarters/WB.UI.Headquarters/Dependencies/css/_common.scss
+++ b/src/UI/Headquarters/WB.UI.Headquarters/Dependencies/css/_common.scss
@@ -754,6 +754,9 @@ dl{
 .d-flex{
 	display: flex;
 }
+.d-block{
+	display: block;
+}
 .f-row{
 	flex-direction: row;
 }
@@ -788,7 +791,9 @@ dl{
 .h-100{
 	height: 100%;
 }
-
+.w-100{
+	width: 100%;
+}
 .font-bold{
 	font-family: "RobotoBold";
 }
